[tool.poetry]
name = "repl_python3_repl-requestrr"
version = "0.1.0"
description = ""
authors = ["ReenigneArcher <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
py7zr = "^0.16.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
